--- a/login.html
+++ b/login.html
@@ -191,13 +191,6 @@
                                 <span class="globalNav-signin">Sign In &nbsp;<i class="fa fa-sign-in" aria-hidden="true"></i></span>
                             </a>
                         </li>
-<!--                        <li class="globalNav-item globalNav-item-signin">
-                            <a id="sign-in" class="globalNav-link globalNav-link--loggedOut"
-                               href="" rel="nofollow">
-                                <span class="globalNav-signin">Register &nbsp;<i class="fa fa-briefcase" aria-hidden="true"></i></span>
-
-                            </a>
-                        </li>-->
 
                     </ul>
                 </nav>
@@ -214,154 +207,90 @@
             <div class="globalNav-background"></div>
             <div class="globalHeader-background"></div>
         </header>
-        <section id="content-section" style="margin: 100px 0px">
+
+
+        <section id="login-section"  style="margin: 100px 0px">
             <div class="container">
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <input class="form-control input-custom-field" placeholder="Enter Name">
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <textarea rows="5" class="form-control select-custom-field"></textarea>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <select class="form-control select-custom-field">
-                            <option value="1">Select 1</option>
-                            <option value="2">Select 2</option>
-                            <option value="3">Select 3</option>
-                            <option value="4">Select 4</option>
-                        </select>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                <button class="form-control common-custom-button">Sign In</button>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6">
+                        <div class="pagelet">
+                            <div class="pagelet_title">
+                                <div class="row">
+                                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                        <a href="" class="active" id="login-form-link">Login</a>
+                                    </div>
+                                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                        <a href="" id="register-form-link">Register</a>
+                                    </div>
+                                </div>
+                                <hr>
                             </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                <button class="form-control common-custom-button">Sign Up</button>
+                            <div class="panel-body">
+                                <form id="login-form" action="" method="post" role="form" >
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="text" name="username" id="username" tabindex="1"  class="form-control input-custom-field" placeholder="User Name">
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="password" name="password" id="password" tabindex="2"  class="form-control input-custom-field" placeholder="Password">
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                            <div class="checkbox checkbox-danger" tabindex="3" >
+                                            <input id="checkbox6" type="checkbox" checked="">
+                                            <label for="checkbox6">
+                                                Check me out
+                                            </label>
+                                        </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                            <div class="text-right forgot-password" tabindex="4" >
+                                                    <a href="">Forgot Password?</a>
+                                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                             <button class="form-control common-custom-button">Log In</button>
+                                        </div>
+                                    </div>
+                                </form>
+                                <form id="register-form" action="" method="post" role="form" class="display-block" >
+                                     <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="text" name="username" id="username" tabindex="1"  class="form-control input-custom-field" placeholder="User Name">
+                                        </div>
+                                    </div>
+                                     <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="email" name="email" id="email" tabindex="2"  class="form-control input-custom-field" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="password" name="password" id="password" tabindex="3"  class="form-control input-custom-field" placeholder="Password">
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <input type="password" name="confirm-password" id="confirm-password" tabindex="4"  class="form-control input-custom-field" placeholder="Confirm Password">
+                                        </div>
+                                    </div>
+                                     <div class="row form-group">
+                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                             <button type="submit" name="register-submit" id="register-submit" class="form-control common-custom-button">Register Now</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <nav aria-label="Page navigation">
-                            <ul class="pagination">
-                                <li>
-                                    <a href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li>
-                                    <a href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr class="thead">
-                                    <th>Serial</th>
-                                    <th>Name</th>
-                                    <th>Month</th>
-                                    <th>Savings</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Nazmul Hasan</td>
-                                    <td>January</td>
-                                    <td>$100</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Alamgir Kabir</td>
-                                    <td>February</td>
-                                    <td>$80</td>
-                                </tr> 
-                                <tr>
-                                    <td>3</td>
-                                    <td>Ridoy Khan</td>
-                                    <td>March</td>
-                                    <td>$50</td>
-                                </tr> 
-                                <tr>
-                                    <td>4</td>
-                                    <td>Beauty Rani</td>
-                                    <td>April</td>
-                                    <td>$20</td>
-                                </tr> 
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <div class="dropdown">
-                            <button class="common-custom-button dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Dropdown
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <h1>Heading h1</h1>
-                        <h2>Heading h2</h2>
-                        <h3>Heading h3</h3>
-                        <h4>Heading h4</h4>
-                        <h5>Heading h5</h5>
-                        <h6>Heading h6</h6>
-                    </div>
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen 
-                            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
-                            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                        <p class="text-justify">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from
-                            45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up
-                            (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during 
-                            the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <div class="checkbox checkbox-danger form-group">
-                            <input id="checkbox6" type="checkbox" checked="">
-                            <label for="checkbox6">
-                                Check me out
-                            </label>
-                        </div>
-                        <div class="radio radio-info radio-inline">
-                            <input type="radio" id="inlineRadio1" value="option1" name="radioInline" checked="">
-                            <label for="inlineRadio1"> Male </label>
-                        </div>
-                        <div class="radio radio-info radio-inline">
-                            <input type="radio" id="inlineRadio2" value="option2" name="radioInline" checked="">
-                            <label for="inlineRadio2"> Female </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-                        <label>This is label</label>
                     </div>
                 </div>
             </div>
         </section>
-
         <section id="footer-section" ></section>
     </body>
 </html>
